--- a/nfeConfig.ini
+++ b/nfeConfig.ini
@@ -1,17 +1,35 @@
 [NFE]
-UF=PR
+UF=
 CNPJ=
+cnpjSh=
+tokenSh=
 NomeCertificado=
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresHom.ini
 ArquivoServidoresProd=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresProd.ini
-DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\
-DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\
+DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\vm60\
+DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\vm60\
 DiretorioLog=Log\
 DiretorioXmlDestinatario=XmlDestinatario\
 TipoCertificado=File
 VersaoManual=6.0
 Ambiente=2
 ModoOperacao=NORMAL
+Repositorio=CURRENT_USER_STORE
+IgnoreInvalidCertificates=1
+ValidarEsquema=0
+PinCode=
+DiretorioLogErro=C:\Program Files\TecnoSpeed\NFe\LogErro\
+DiretorioTemporario=C:\Program Files\TecnoSpeed\NFe\Temp\
+SalvarLogsEmDisco=1
+ConexaoSegura=1
+Proxy=
+Senha=
+Usuario=
+TimeOut=0
+CaracteresRemoverAcentos=·ÈÌÛ˙‡ËÏÚ˘‚ÍÓÙ˚‰ÎÔˆ¸„ıÒÁ¡…Õ”⁄¿»Ã“Ÿ¬ Œ‘€ƒÀœ÷‹√’—«∫™
+AnexarDanfePDF=1
+MaxSizeLoteEnvio=500
+
 
 [SCAN]
 UF=SP
@@ -26,7 +44,7 @@ VersaoManual=6.0
 
 [DPEC]
 UF=SP
-CNPJ=08187168000160
+CNPJ=
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresHomDPEC.ini
 DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\
 DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\
@@ -36,11 +54,11 @@ NomeCertificado=
 VersaoManual=6.0
 
 [MAIL]
-Servidor=smtp.gmail.com
-EmailRemetente=joao.costa@tecnospeed.com.br
-EmailDestinatario=joao.costa@tecnospeed.com.br
+Servidor=
+EmailRemetente=
+EmailDestinatario=
 Assunto="Exemplo de envio de DANFE por email"
 Mensagem="O arquivo est· anexo."
-Usuario=jsncuritiba@gmail.com	
-Senha=joao00000
+Usuario=
+Senha=
 Autenticacao=1
