--- a/nfeConfig.ini
+++ b/nfeConfig.ini
@@ -1,35 +1,19 @@
 [NFE]
 UF=
 CNPJ=
-cnpjSh=
-tokenSh=
+CNPJSH=
+TOKENSH=
 NomeCertificado=
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresHom.ini
 ArquivoServidoresProd=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresProd.ini
-DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\vm60\
-DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\vm60\
+DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\
+DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\
 DiretorioLog=Log\
 DiretorioXmlDestinatario=XmlDestinatario\
 TipoCertificado=File
 VersaoManual=6.0
 Ambiente=2
 ModoOperacao=NORMAL
-Repositorio=CURRENT_USER_STORE
-IgnoreInvalidCertificates=1
-ValidarEsquema=0
-PinCode=
-DiretorioLogErro=C:\Program Files\TecnoSpeed\NFe\LogErro\
-DiretorioTemporario=C:\Program Files\TecnoSpeed\NFe\Temp\
-SalvarLogsEmDisco=1
-ConexaoSegura=1
-Proxy=
-Senha=
-Usuario=
-TimeOut=0
-CaracteresRemoverAcentos=·ÈÌÛ˙‡ËÏÚ˘‚ÍÓÙ˚‰ÎÔˆ¸„ıÒÁ¡…Õ”⁄¿»Ã“Ÿ¬ Œ‘€ƒÀœ÷‹√’—«∫™
-AnexarDanfePDF=1
-MaxSizeLoteEnvio=500
-
 
 [SCAN]
 UF=SP
@@ -44,7 +28,7 @@ VersaoManual=6.0
 
 [DPEC]
 UF=SP
-CNPJ=
+CNPJ=08187168000160
 ArquivoServidoresHom=C:\Program Files\TecnoSpeed\NFe\arquivos\nfeServidoresHomDPEC.ini
 DiretorioEsquemas=C:\Program Files\TecnoSpeed\NFe\arquivos\Esquemas\
 DiretorioTemplates=C:\Program Files\TecnoSpeed\NFe\arquivos\Templates\
@@ -57,8 +41,14 @@ VersaoManual=6.0
 Servidor=
 EmailRemetente=
 EmailDestinatario=
-Assunto="Exemplo de envio de DANFE por email"
-Mensagem="O arquivo est· anexo."
 Usuario=
+Porta=587
 Senha=
-Autenticacao=1
+Assunto=Nota Teste
+Mensagem=Nota Teste
+Autenticacao=0
+CCo=
+CC=
+TimeOut=60000
+ConteudoHtml=1
+
